--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -16,3 +16,6 @@
     margin: 0;
   }
 }
+
+.dark-mode-cards {
+}
