--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -18,6 +18,7 @@
   display: flex;
   gap: 1rem;
   align-items: center;
+  cursor: pointer;
   /* display: none; */
 }
 
