--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -87,6 +87,16 @@ input {
   .input {
     width: 100%;
   }
+  .dark-mode-filter {
+    background-color: var(--dark-blue);
+    color: white;
+    filter: grayscale(var(--image-grayscale));
+    z-index: 10;
+    flex-direction: row;
+    width: auto;
+    left: calc(100%+10px);
+    top: 0%;
+  }
 }
 /* Add these styles to your CSS file */
 
@@ -116,4 +126,11 @@ input {
   background-color: var(--dark-blue);
   color: white;
   filter: grayscale(var(--image-grayscale));
+}
+
+.dark-mode-filter {
+  background-color: var(--dark-blue);
+  color: white;
+  filter: grayscale(var(--image-grayscale));
+  z-index: 10;
 }
